--- a/manuscript/institutional-design-climate-policy.tex
+++ b/manuscript/institutional-design-climate-policy.tex
@@ -67,13 +67,11 @@
 
 \doublespacing
 
-\title{Institutional Design and Elite Support for Climate Policies: Evidence from Latin American Countries\thanks{We thank Nigel Ashford, F\'{a}bio Barros, Frans Berkhout, Daniel D'Amico, Guilherme Fasolin, Manoel Galdino, Malte Hendricks, Stephen Herzog, Christian H\"{u}bner, Karina Marzano, Davi Moreira, Emily Skarbek, Paula Vedovelli, and the participants at the FGV IR Seminar for their valuable comments. Special thanks to Natalia Liberato, Lucas Mingardi, Ingrid Oliveira, Catarina Roman, Leticia Santana, and Larissa Santos for their excellent research assistance. This research received IRB approval from Brown University (Protocol 2195/2018) and Funda\c{c}\~{a}o Getulio Vargas (Protocol 83/2018). We acknowledge financial support from the Konrad Adenauer Stiftung Latin American Regional Programme for Energy Security and Climate (EKLA-KAS) and declare there are no conflicts of interest. The data, code, and additional materials required to replicate all analyses in this article are available at \href{http://github.com/danilofreire/climate-governance}{\texttt{http://github.com/danilofreire/climate-governance}}.}
-}
+\title{Institutional Design and Elite Support for Climate Policies: Evidence from Latin American Countries\thanks{We thank Nigel Ashford, F\'{a}bio Barros, Frans Berkhout, Daniel D'Amico, Guilherme Fasolin, Manoel Galdino, Malte Hendricks, Stephen Herzog, Christian H\"{u}bner, Karina Marzano, Davi Moreira, Emily Skarbek, Paula Vedovelli, and the participants at the FGV IR Seminar for their valuable comments. Special thanks to Natalia Liberato, Lucas Mingardi, Ingrid Oliveira, Catarina Roman, Leticia Santana, and Larissa Santos for their excellent research assistance. This research received IRB approval from Brown University (Protocol 2195/2018) and Funda\c{c}\~{a}o Getulio Vargas (Protocol 83/2018). We acknowledge financial support from the Konrad Adenauer Stiftung Latin American Regional Programme for Energy Security and Climate (EKLA-KAS) and declare there are no conflicts of interest. The data, code, and additional materials required to replicate all analyses in this article are available at \href{http://github.com/danilofreire/climate-governance}{\texttt{http://github.com/danilofreire/climate-governance}}.}}
 
 \author{Danilo Freire\thanks{Postdoctoral Research Associate, The Political Theory Project, Brown University, Providence, RI 02912, USA, \href{mailto:danilo_freire@brown.edu}{\texttt{danilo\_freire@brown.edu}}, \href{http://danilofreire.github.io}{\texttt{http://danilofreire.github.io}}, \href{http://twitter.com/danilofreire}{\texttt{http://twitter.com/danilofreire}}, Voice: +1 (401) 584-2494. Corresponding author.}
 \and Umberto Mignozzetti\thanks{School of International Relations, Funda\c{c}\~{a}o Getulio Vargas, S\~{a}o Paulo, SP, Brazil and Wilf Family Department of Politics, NYU, NY, USA, \href{mailto:umberto.mignozzetti@fgv.br}{\texttt{umberto.mignozzetti@fgv.br}}, \href{http://umbertomig.com}{\texttt{http://umbertomig.com}}, \href{http://twitter.com/umbertomig}{\texttt{http://twitter.com/umbertomig}}.}
-\and David Skarbek\thanks{The Department of Political Science and the Political Theory Project, Brown University, Providence, RI, USA, \href{mailto:david_skarbek@brown.edu}{\texttt{david\_skarbek@brown.edu}}, \href{http://davidskarbek.com}{\texttt{http://davidskarbek.com}}, \href{http://twitter.com/davidskarbek}{\texttt{http://twitter.com/davidskarbek}}.}
-}
+\and David Skarbek\thanks{The Department of Political Science and the Political Theory Project, Brown University, Providence, RI, USA, \href{mailto:david_skarbek@brown.edu}{\texttt{david\_skarbek@brown.edu}}, \href{http://davidskarbek.com}{\texttt{http://davidskarbek.com}}, \href{http://twitter.com/davidskarbek}{\texttt{http://twitter.com/davidskarbek}}.}}
 
 \date{\today}
 
@@ -93,7 +91,7 @@ Which institutional features do Latin American elites favor for climate change p
 \vspace{.5cm}
 
 \noindent 
-\textbf{Word count:} 3908
+\textbf{Word count:} 3839
 \end{abstract}
 
 \newpage
@@ -105,11 +103,9 @@ Which institutional features do Latin American elites favor for climate change p
 
 Despite the emerging consensus about the causes and consequences of global warming, international climate summits have often fallen short of expectations \citep{rogelj2010copenhagen, rosen2015wrong, victor2017prove}. Multilateral negotiations have progressed slowly under the guidelines of the United Nations Framework Convention on Climate Change (UNFCCC), and there is widespread skepticism that international talks will advance more quickly in the coming years \citep{cole2015advantages, hjerpe2015views}. As carbon dioxide emissions continue to increase, scientists believe current efforts may not be sufficient to meet the target of $2^{\circ}$C temperature rise above pre-industrial levels \citep{jordan2015emergence}.
 
-These concerns have motivated a growing debate about which institutional characteristics lead to successful climate agreements \citep[e.g.,][]{aklin2013understanding, bechtel2013mass, bechtel2017interests, keohane2011regime, ostrom2014polycentric}. Climate treaties are incomplete contracts, in which members purposefully design flexible provisions that take domestic circumstances into account \citep[607]{brauninger2000making}. For instance, the Paris Agreement relies on Nationally Determined Contributions (NDCs), a set of greenhouse gas reduction targets each member state voluntarily pledges to achieve \citep{winning2019nationally}. This decentralization increases the importance of national stakeholders in climate negotiations, and studies have shown that the behavior of elite groups, like advocacy coalitions and political parties, largely explain countries' climate policy performance \citep{jahn2016politics, karapin2012explaining}. 
+These concerns have motivated a growing debate about which institutional characteristics lead to successful climate agreements \citep[e.g.,][]{bechtel2013mass, bechtel2017interests, keohane2011regime, mitchell2006problem, ostrom2014polycentric}. Climate treaties are incomplete contracts, in which members purposefully design flexible provisions that take domestic circumstances into account \citep[607]{brauninger2000making}. For instance, the Paris Agreement relies on Nationally Determined Contributions (NDCs), a set of greenhouse gas reduction targets each member state voluntarily pledges to achieve \citep{winning2019nationally}. This decentralization increases the importance of national stakeholders in climate negotiations, and studies have shown that the behavior of elite groups -- specially that of advocacy coalitions and political networks -- largely explain countries' climate policy performance \citep{jahn2016politics, karapin2012explaining}. Elites can advance or constrain climate agreements using `societal steering' strategies such as capacity building and rule setting, thus acting as \textit{de facto} veto players in local environmental policies \citep{andonova2009transnational, bulkeley2014transnational}.
 
-Elites engage in different forms of `societal steering' to achieve policy goals, such as information sharing or rule setting \citep{andonova2009transnational, bulkeley2014transnational}. For example, non-governmental organizations have played a major role in the fossil fuel divestment movement by highlighting the urgency of the topic in developed countries \citep{ayling2017non}. In contrast, Brazil's rural caucus, an informal coalition of landholders and mining industrialists, have successfully lobbied for legislation that undermines previous carbon emission policies \citep{rochedo2018threat, simionatto2012dominantes}. Therefore, understanding the preferences of elite groups provides policy-makers with key information for designing effective, politically viable climate agreements.
-
-Although research on public opinion about climate change has increased significantly in the last years \citep[e.g.,][]{aklin2013understanding, bechtel2013mass, bechtel2017interests, mildenberger2017beliefs}, elite preferences are not well documented in the literature. This is a significant omission considering their importance as lobbyists or veto players in domestic climate politics. Elites in developing countries are specially understudied, despite the fact that emerging economies account for 63\% of the world's carbon emissions \citep{busch2015developing}. It is unclear which climate strategies face lower internal resistance from these groups, or whether their environmental preferences are fundamentally different from those of their developed countries counterparts \citep[28]{aklin2013understanding}.
+Although research on public opinion and climate agreements has increased significantly in the last years \citep[e.g.,][]{aklin2013understanding, bechtel2013mass, bechtel2017interests, mildenberger2017beliefs}, elite preferences are not well documented in the literature. This is a significant omission considering that recent work has stressed the impact of elite coalitions in areas such as global finance and international banking regulation \citep[e.g,][]{chalmers2017banks, pagliari2014leveraged}. Elites in developing countries are specially understudied, despite the fact that emerging economies account for 63\% of the world's carbon emissions \citep{busch2015developing}. It is unclear which climate strategies face lower internal resistance from these groups, or whether their environmental preferences are fundamentally different from those of their developed countries counterparts \citep[28]{aklin2013understanding}.
 
 We help remedy this gap by assessing which climate change governance systems Latin American elites are willing to support. In our survey experiment, we asked 654 respondents -- academics, members of the executive power, legislators, businesspeople and members of non-governmental organizations -- to select their preferred agreement among 7 repetitions of binary choices. We vary the agreements across six dimensions commonly debated in the climate change and institutional design literatures: rule-making capabilities \citep{dubash2013developments, massey2014climate}; conflict resolution mechanisms \citep{huntjens2012institutional, ostrom2014polycentric}; enforcement methods \citep{barrett2008climate}; punishment for repeated violators \citep{ostrom1990governing}; cost sharing \citep{bechtel2013mass}; and agreement duration \citep{copelovitch2014design, marcoux2009institutional}. Variations in any of those features can substantially change the outcomes of climate institutions \citep{bodin2017collaborative, ostrom2014polycentric}.
 
@@ -130,10 +126,9 @@ We focus on Latin American elites for three reasons. First, elites have an impor
 
 We use a dataset compiled specifically for this study. From October 1 to December 5, 2018, we ran an elite survey with respondents from Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama and Peru. We started by gathering information on potential interviewees. For each country, we collected the profiles of 100 members of the Executive, 100 members of the Legislative, 150 academics in the energy sector and 150 members of the civil society. We then sampled these profiles until we achieved a minimum of 10\% of responses within each group. We ran our survey both online and by telephone, collecting information on the climate change agreements and other related questions in a non-intrusive manner \citep{loewen2010help}. We had two teams of enumerators, one based in S\~{a}o Paulo and another based in Rio de Janeiro, Brazil, comprised of Portuguese and Spanish native speakers. Please refer to the Supplementary Material for more information about the sampling process and descriptive statistics.
 
-The hypothetical climate change agreements include six attributes: 1) which organizations defines the rules; 2) how would conflicts be resolved; 3) what punishment should be applied to rule-breakers; 4) how should repeated violations be sanctioned; 5) which countries should bear the costs of the agreement; 6) how often should the agreement be renegotiated. Table~\ref{tab:categories} describes the values we included in each treaty attribute. 
+The hypothetical climate change agreements include six attributes: 1) which organizations defines the rules; 2) how would conflicts be resolved; 3) what punishment should be applied to rule-breakers; 4) how should repeated violations be sanctioned; 5) which countries should bear the costs of the agreement; 6) how often should the agreement be renegotiated. Table~\ref{tab:categories} describes the values we included in each treaty attribute.
 
 \begin{table}[H]
-\small
 \begin{center}
 \caption{\textbf{Attributes and values for climate change mitigation conjoint experiments}}
 \label{tab:categories} 
@@ -235,3 +230,5 @@ For supplementary material for this article, please visit \href{http://github.co
 \bibliography{references.bib}
 
 \end{document}
+
+
