--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -838,7 +838,7 @@ year = {2019}
 @article{luna2005political,
   title={{Political Representation in Latin America: A Study of Elite-Mass Congruence in Nine Countries}},
   author={Luna, Juan P and Zechmeister, Elizabeth J},
-  journal={Comparative political studies},
+  journal={Comparative Political Studies},
   volume={38},
   number={4},
   pages={388--416},
@@ -1046,5 +1046,71 @@ year = {2019}
   pages={83--93},
   year={2010},
   publisher={Elsevier}
+}
+
+@article{mitchell2006problem,
+  title={{Problem Structure, Institutional Design, and the Relative Effectiveness of International Environmental Agreements}},
+  author={Mitchell, Ronald B},
+  journal={Global Environmental Politics},
+  volume={6},
+  number={3},
+  pages={72--89},
+  year={2006},
+  publisher={MIT Press}
+}
+
+@article{claessens2007finance,
+  title={{Finance and Inequality: Channels and Evidence}},
+  author={Claessens, Stijn and Perotti, Enrico},
+  journal={Journal of comparative Economics},
+  volume={35},
+  number={4},
+  pages={748--773},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{faccio2006political,
+  title={{Political Connections and Corporate Bailouts}},
+  author={Faccio, Mara and Masulis, Ronald W and McConnell, John J},
+  journal={The Journal of Finance},
+  volume={61},
+  number={6},
+  pages={2597--2635},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@article{igan2014wall,
+  title={{Wall Street, Capitol Hill, and K Street: Political Influence and Financial Regulation}},
+  author={Igan, Deniz and Mishra, Prachi},
+  journal={The Journal of Law and Economics},
+  volume={57},
+  number={4},
+  pages={1063--1084},
+  year={2014},
+  publisher={University of Chicago Press Chicago, IL}
+}
+
+@article{pagliari2014leveraged,
+  title={{Leveraged Interests: Financial Industry Power and the Role of Private Sector Coalitions}},
+  author={Pagliari, Stefano and Young, Kevin L},
+  journal={Review of International Political Economy},
+  volume={21},
+  number={3},
+  pages={575--610},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
+@article{chalmers2017banks,
+  title={{When Banks Lobby: The Effects of Organizational Characteristics and Banking Regulations on International Bank Lobbying}},
+  author={Chalmers, Adam William},
+  journal={Business and Politics},
+  volume={19},
+  number={1},
+  pages={107--134},
+  year={2017},
+  publisher={Cambridge University Press}
 }
 
