--- a/manuscript/institutional-design-climate-policy.tex
+++ b/manuscript/institutional-design-climate-policy.tex
@@ -86,7 +86,7 @@ Which institutional features do Latin American elites favor for climate change p
 \vspace{.5cm}
 
 \noindent 
-\textbf{Keywords:} climate change, institutional design, elites, Latin America, regime complex
+\textbf{Keywords:} climate change, elites, institutional design, Latin America, regime complex
 
 \vspace{.5cm}
 
