commit appendix adding conj dimensions expl

--- a/appendix/appendix-institutional-design-climate-policy.Rmd
+++ b/appendix/appendix-institutional-design-climate-policy.Rmd
@@ -590,6 +590,48 @@ In our research, we ask what features elite members would like to see implemente
 
 Conjoint experiments have many advantages. First, as each individual chooses between many pairs of possible climate agreements -- seven in our case -- we can drastically increase our sample size without incurring in further financial costs. The design thus maximizes our research budget. Second, individuals rarely decide considering one attribute at a time, as presented in other types of survey experiments. In that regard, our conjoint analysis mirrors how people naturally make their choices, that is, by simultaneously taking several characteristics into consideration. Finally, as the experiments consist of a simple choice between A and B, conjoint analyses are easy to understand and to implement. This research design reduces the cognitive load interviewees have while answering surveys and as a result, we can expect more accurate responses from our sample.  
 
+# An Explanation for our Conjoint Dimensions \label{sec:conjdim}
+
+In Table 1 of the main paper, we present the attributes and values for climate mitigation in our conjoint experiment. Here, we present the theoretical underpinnings of each of the dimensions and attributes evoked.
+
+## Attribute One: *Who makes the rules*
+
+Climate change governance faces various challenges when one considers its national and local implementation. For example, the voluntary character of the Nationally Determined Contributions (NDCs), at the heart of the Paris Agreement, illustrates its decentralized nature and renders the local implementation crucial for the arrangement’s success and the achievement of these long-term goals. That said, the first natural challenge, and the first dimension of our conjoint, is *Who makes the rules?*. In that sense, climate governance can be observed in different levels, such as the national, international, the subnational, regional and local levels [@bruhl2001international]. Microlevel implementation requires regulations and attribution of responsibilities for each level, for which we propose the following levels of ruling: International Organizations; federal governments; local governments; local community members; and non-governmental organizations. These levels reveal differences in rulemaking and top-down versus bottom-up possible schemes.
+
+Moving to the *International Organizations* dimension, there is not an international forum or International Organization that centralizes agenda-setting, rulemaking, conflict resolution or enforcement for climate-related issues. On the other hand, the Conference of Parties is the highest decision-making body of the UNFCCC (United Nations Framework Convention on Climate Change), and the UN Climate Convention could possibly evolve to more institutionalized models of international governance. The very signing of the ensemble of agreements, such as the Kyoto Protocol, the Rio Convention and the Paris Agreement, in fact, consists in a step in this direction. Taking as an example the WTO (World Trade Organization) historical creation from GATT (General Agreement on Tariffs and Trade), international organizations play a role as gatekeepers, issue entrepreneurs and diffusors of international norms, sometimes leading to the establishment of international organizations and regimes, as pointed by Rational functionalism IR Scholars [@simons2002handbook]. By defining salient issues, and establishing forms of cooperation, they help determine priorities and contribute to more effective decision-making [@keohane2012power] and the development of common norms. This mechanism could plausibly be valued by specific country elites as a reliable and legitimate source of rulemaking.
+
+An alternative take on rulemaking schemes is the one regarding the *Federal government*. Once a treaty is signed and ratified, it must be internalized by at least a number of signatories in order to entry into force. In other words, federal governments have to comply with the engagement, which highlights the essential role played by States when implementing international treaties, mainly because despite transnational networks and the emergence on non-state actors in the globalized world, States are still the main actors of International Public Law. Concerning climate-related agreements, that the bare existence of international institutions doesn’t necessarily provide global governance and these engagements can be seen as a normative and discursive way to virtually meet public opinion’s demands without taking further (and perhaps more effective) initiatives [@dimitrov2005hostage]. In that sense, elites could prefer actions taken by the federal sphere in order to advance environmental legislation. Indeed, there are many examples of national climate legislation for example, of the Mexican General Law for Climate Change (2012), the Bolivian Mother Earth Legal Framework (Law nº300, 2012) and the Costa Rican Biodiversity Law (1998). 
+
+Local actors, such as municipal governments, have also been crucial to the implementation of policies and creation of climate mitigation norms [@barber2013if; @fraundorfer2017role]. Significantly, cities have built a number of networks, allowing for better coordination of their actions and settlement of shared problems [@fraundorfer2017role], as shown by the ICLEI (Local Governments for Sustainability) and the C40 initiatives, which connects 94 cities in coordinated actions against climate change. Note that some countries commit, internalize and implement international climate rules in a more direct manner, while other countries opt to withdraw from the climate treaties altogether, leaving only local governments to voluntarily comply with the Convention. An example is the ruling proposed by the California Governor on a state plan to follow the mitigation schemes proposed within the Paris Agreements, even though, at national level, the USA had chosen to withdraw.
+
+Likewise, climate mitigation practices and norms are influenced, and may even be determined, by local community members and non-governmental organizations, who act as important agenda-, rule- and norm-setters in the field, contributing also to compliance monitoring [@bruhl2001international]. Especially relevant in Latin America, some indigenous groups that are particularly vulnerable to climate changes are politically responsive to climate-related issues. Particularly, not only are they engaged in the local sphere but are also gradually more active in the international arena [@bellier2012peuples], for example through the United Nations Permanent Forum on Indigenous Issues. That is also the case for other civil society members such as non-governmental organizations (NGOs), such as the Asamblea Nacional de Afectados Ambientales (ANAA) in Mexico, the Red de los Pueblos Fumigados in Argentina and the Rede Brasileira de Justiça Ambiental (RBJA) in Brazil.
+
+## Attribute Two: *Conflict Resolution Mechanism*
+
+Reacting to non-compliance, members could take the claim to a dispute settlement mechanism or institution, and its legitimacy is key for enforcement mechanisms and cost reparation. We consider five dimensions that are theoretically plausible for the dispute settlement: United Nations; government bureaucracy; local courts; private arbitration; and informal norms. Many disputes, such as trade disagreement between two countries, are already solved by international courts, such as the WTO dispute settlement body and the International Chamber of Commerce's International Court of Arbitration.
+
+In other situations, government bureaucracies have the discretion to impose fines, punish violators and settle conflicts, playing an important role in governing climate policies [@biesbroek2018public]. Examples of this case are the Brazilian federal agency IBAMA (Brazilian Environmental Protection Agency), that rules nationally on any violation of environmental laws in the country, and Costa Rican national environmental office (SETENA), responsible for receiving denunciations and conducting investigations on environmental crimes.
+
+Local courts can also function as conflict resolution mechanisms in case of non-compliance, as in the lawsuit filed by almost 30 thousand Ecuadorian citizens against oil companies Texaco/Chevron, in a provincial court of Ecuador [@pigrau2014texaco]. Alternatively, private arbitration is  a low-cost and prompt approach for the problem in the case of violations.
+
+Informal norms could also be a plausible and low-cost form of solving conflicts. For example, non-institutionalized forms of reputational sanction within the climate international regime, such as *naming and shaming* can act as a peer-pressure mechanism pushing for compliance. Note that informal norms within communities usually boost compliance in many situations and allow for more flexible and context adapted solutions.  Accordingly, @finnemore1998international point that norms enhancement process is connected with social behavior, attributing social mechanisms (persuasion, habit, socialization, etc.) to each phase.
+
+Considering all this menu of choice, therefore, it is important to understand the preferences of elites, as this could potentially legitimate a conflict resolution mechanism that may be seen as less theoretically efficient.
+
+## Attributes Three and Four: *Punishment* and *Punishment for repeated violation*
+
+The third and fourth attributes relate to punishments against non-compliance. Punishments are key for ensuring high levels of compliance with rules, following the type of violation and its recurrence. We design the first feature, *Punishment*, to capture what types of punishment are more agreeable through the elite's lenses in the case of violation of a climate agreement. Note that the options presented match most of the national regulations on the subject and, thus, constitute plausible answers for the interviewees. For instance, in Brazil, violations are punishable with a range of options, from community services and fines to imprisonment (Law 9605/98) (available in: http://www.planalto.gov.br/ccivil_03/leis/l9605.htm), that is also the case for Peru (Law 29263) (available in: http://www.minam.gob.pe/delitosambientales). In the same direction, Ecuador recently approved a legislation that put severe penalties on perpetrators of climate violations in the national constitution, and incarceration is one of possible punishments (Article 245, Código Orgánico Integral Penal) (available in:http://www.oas.org/juridico/PDFs/mesicic5_ecu_ane_con_judi_c%C3%B3d_org_int_pen.pdf). Here we want to capture which types of action are perceived by elites as more effective punishments for non-compliance. Following the same logic, the second feature captures the actions that should be taken upon repeated violations on the agreement or norms from the elites’ perspectives.
+
+## Attribute Five: *Agreement costs*
+
+The fifth design principle regards the distribution of the agreement’s costs. In this attribute we consider the normative debate according to which developed and developing countries had different pledges regarding the attribution of responsibilities on the implementation costs. More specifically, during the COP 21 negotiations, two main approaches have encompassed climate agreements debates: on one hand, developing nations claimed the need for an equal per capta responsibility for emissions, and, on the other hand, the developing countries' appealed to historical responsibility (Santos, 2016). This encompasses a bigger discussion regarding global climate discussion that was already present in the former UN Convention for Climate, which divided countries into two groups, following their level of development; under Copenhagen Accord, Cancun Agreements and the Kyoto Protocol, developed countries were the sole accountable for their emissions [@kartha2011comparison]. Over time, developed countries contested this separation, and a new principle emerged, that of *common but differentiated responsibilities and respective capabilities*, still acknowledging that historically, developed countries have emitted more greenhouse gas than developing countries.
+
+That said, the design feature of our conjoint allows us to capture whether Latin American elites are willing to pay the costs for implementing climate change policies, or whether they are more prone to transfer the costs to developed countries; or if they consider that the cost should be allocated to those with bigger historical or current emissions. Understanding what the elite’s stand on this normative issue is essential for assuring compliance in the local level and for crafting national level climate governance schemes.
+
+## Attribute Six: *Renegotiation*
+
+Finally, the last dimension investigates the rigidity of the agreement. From the theoretical standpoint, we know from the contract theory literature that more rigid agreements may fall short when conditions changed. However, agreements that change constantly might be too unstable to form a path dependency and provide focal points for coordination through time. On the other hand, a country may require continuous and frequent changes to adapt to the new ruling, case in which it could be potentially beneficial to increase the renegotiation frequency. For instance, if a previous ruling has a deleterious effect in the economy while only improving slightly the environmental output, it would likely be in the elites’ interest to renegotiate frequently. In such a context, the timing of renegotiation becomes a crucial variable influencing the design of national and local legislation on climate mitigation, and there is no reason to assume that a renegotiation period of five years is the only plausible preference of national elites.
+
 # Descriptive Statistics \label{sec:descstats}
 
 The main demographic statistics collected were the country and elite types, and the geolocation of the respondents. They follow in the graphs below.
