--- a/appendix/references.bib
+++ b/appendix/references.bib
@@ -1,5 +1,15 @@
 %%% References
 
+@article{santos2017global,
+  title={Global justice and environmental governance: an analysis of the Paris Agreement},
+  author={Santos, Marcelo},
+  journal={Revista Brasileira de Pol{\'\i}tica Internacional},
+  volume={60},
+  number={1},
+  year={2017},
+  publisher={SciELO Brasil}
+}
+
 @misc{strezhnev2013conjoint,
   title={{Conjoint Survey Design Tool: Software Manual}},
   author={Strezhnev, Anton and Hainmueller, Jens and Hopkins, Daniel J and Yamamoto, Teppei},
@@ -183,10 +193,11 @@ year = {1998}
 }
 
 @article{bellier2012peuples,
-  title={Les peuples autochtones aux Nations unies: un nouvel acteur dans la fabrique des normes internationales},
+  title={Les peuples autochtones aux Nations Unies: un nouvel acteur dans la fabrique des normes internationales},
   author={Bellier, Ir{\`e}ne},
   journal={Critique internationale},
-  number={1},
+  number={54},
+	volume={1},
   pages={61--80},
   year={2012},
   publisher={Presses de Sciences Po}
@@ -327,8 +338,6 @@ year = {1998}
 }
 
 @article{almer2010environmental,
- ISSN = {00237639},
- URL = {http://www.jstor.org/stable/27920286},,
  author = {Christian Almer and Timo Goeschl},
  journal = {Land Economics},
  number = {4},
